--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/ModPane.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/ModPane.xaml
@@ -4,11 +4,18 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
+    xmlns:controls1="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views.CharacterDetailsPages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:subViewModels="using:GIMI_ModManager.WinUI.ViewModels.CharacterDetailsViewModels.SubViewModels"
+    xmlns:xaml="using:GIMI_ModManager.WinUI.Helpers.Xaml"
     IsEnabled="{x:Bind ViewModel.IsNotReadOnly, Mode=OneWay}"
     mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <xaml:StringToUri x:Name="StringToUri" />
+    </UserControl.Resources>
 
     <Grid
         x:Name="ModDetailsPane"
@@ -17,54 +24,58 @@
         Padding="5,5,5,5"
         Background="{ThemeResource ControlFillColorDefaultBrush}"
         CornerRadius="10">
+
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="3*" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+
         </Grid.RowDefinitions>
-        <Grid Margin="0,0,0,8" VerticalAlignment="Top">
-            <Button
-                HorizontalAlignment="Right"
-                Content="Open In New Window"
-                ToolTipService.ToolTip="Set Mod preview image"
-                Visibility="Collapsed" />
-        </Grid>
-        <!--  IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}"  -->
 
         <Grid
-            Grid.Row="1"
+            Grid.Row="0"
             MinWidth="200"
             MinHeight="200"
             AllowDrop="True"
             Background="{ThemeResource ControlFillColorTertiaryBrush}"
-            ContextFlyout="{Binding ElementName=ImageFlyout}"
             CornerRadius="10">
             <!--
                 DragEnter="ModDetailsPaneImage_OnDragEnter"
                 DragOver="ModDetailsPaneImage_OnDragOver"
                 Drop="ModDetailsPaneImage_OnDrop"
             -->
-            <Image Stretch="Uniform">
+            <!--<Image Stretch="Uniform">
                 <Image.Source>
-                    <BitmapImage CreateOptions="IgnoreImageCache" UriSource="{x:Bind ViewModel.ShownModImageUri, Mode=OneWay}" />
+                    <BitmapImage CreateOptions="IgnoreImageCache" UriSource="{x:Bind ViewModel.ModModel.ImageUri, Mode=OneWay}" />
                 </Image.Source>
             </Image>
             <Button
                 Margin="0,20,20,0"
                 HorizontalAlignment="Right"
-                VerticalAlignment="Top">
-                <!--
-                    Command="{x:Bind ViewModel.ModPaneVM.SetImageUriCommand}"
-                    IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}"
-                -->
+                VerticalAlignment="Top"
+                IsEnabled="{x:Bind ViewModel.IsNotReadOnly, Mode=OneWay}">
+            -->
+            <!--
+                Command="{x:Bind ViewModel.ModPaneVM.SetImageUriCommand}"
+            -->
+            <!--
                 <FontIcon Glyph="&#xE70F;" />
-            </Button>
+            </Button>-->
+
+            <controls:CustomImage
+                x:Name="ModDetailsPaneImage"
+                ButtonHorizontalAlignment="Right"
+                ButtonVerticalAlignment="Top"
+                ClearButtonCommand="{x:Bind ViewModel.ClearImageCommand}"
+                CopyButtonCommand="{x:Bind ViewModel.CopyImageToClipboardCommand}"
+                EditButtonCommand="{x:Bind ViewModel.PickImageUriCommand}"
+                ImageUri="{x:Bind ViewModel.ModModel.ImageUri, Mode=OneWay}"
+                IsContextMenuEnabled="True" />
         </Grid>
-        <!--<Grid Grid.Row="2">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -73,25 +84,27 @@
                 x:Name="ModNameTextBlock"
                 Margin="0,8"
                 HorizontalAlignment="Stretch"
-                IsEditMode="{x:Bind ViewModel.ModPaneVM.IsEditingModName, Mode=OneWay}"
+                IsEditMode="{x:Bind ViewModel.IsEditingModName, Mode=OneWay}"
                 Style="{ThemeResource SubtitleTextBlockStyle}"
                 TextAlignment="Center"
                 ToolTipService.ToolTip="Change mod display name"
-                Text="{x:Bind ViewModel.ModPaneVM.SelectedModModel.Name, Mode=TwoWay}" />
+                Text="{x:Bind ViewModel.ModModel.ModDisplayName, Mode=TwoWay}" />
+
+
 
             <SplitButton
                 Grid.Column="1"
-                Command="{x:Bind ViewModel.ModPaneVM.ToggleEditingModNameCommand}"
-                IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}">
+                Command="{x:Bind ViewModel.ToggleEditingModNameCommand}"
+                IsEnabled="{x:Bind ViewModel.IsNotReadOnly, Mode=OneWay}">
                 <FontIcon Glyph="&#xE70F;" />
                 <SplitButton.Flyout>
                     <MenuFlyout Placement="Bottom">
                         <MenuFlyoutItem
-                            Command="{x:Bind ViewModel.ModPaneVM.SetModIniFileCommand}"
+                            Command="{x:Bind ViewModel.SetModIniFileCommand}"
                             ToolTipService.ToolTip="Set the mod .ini file to be read by JASM"
                             Text="Set mod .ini file" />
                         <MenuFlyoutItem
-                            Command="{x:Bind ViewModel.ModPaneVM.ClearSetModIniFileCommand}"
+                            Command="{x:Bind ViewModel.ClearSetModIniFileCommand}"
                             Icon="Clear"
                             ToolTipService.ToolTip="JASM will not look for merged.ini/Script.ini file and ignore keyswaps for this mod"
                             Text="Ignore .ini file for this mod" />
@@ -101,7 +114,7 @@
             </SplitButton>
         </Grid>
 
-        <Grid Grid.Row="3">
+        <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -109,38 +122,29 @@
             <TextBox
                 VerticalAlignment="Center"
                 Header="Mod Url:"
-                IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}"
-                Text="{x:Bind ViewModel.ModPaneVM.SelectedModModel.ModUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                IsEnabled="{x:Bind ViewModel.IsNotReadOnly, Mode=OneWay}"
+                Text="{x:Bind ViewModel.ModModel.ModUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
             <HyperlinkButton
                 Grid.Column="1"
                 VerticalAlignment="Bottom"
-                IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}"
-                NavigateUri="{x:Bind ViewModel.ModPaneVM.SelectedModModel.ModUrl, Mode=OneWay, Converter={StaticResource StringToUri}}">
+                IsEnabled="{x:Bind ViewModel.IsNotReadOnly, Mode=OneWay}"
+                NavigateUri="{x:Bind ViewModel.ModModel.ModUrl, Mode=OneWay, Converter={StaticResource StringToUri}}">
                 <FontIcon FontSize="18" Glyph="&#xE8A7;" />
             </HyperlinkButton>
 
         </Grid>
 
 
-        <StackPanel Grid.Row="4" Orientation="Horizontal">
-            <TextBlock Visibility="Collapsed" Text="Latest Version:" />
-            <TextBlock Text="{x:Bind ViewModel.ModPaneVM.SelectedModModel.ModUrl}" />
 
-        </StackPanel>
+        <ScrollViewer Grid.Row="3">
 
-        <ScrollViewer
-            Grid.Row="5"
-            Margin="0,12,0,0"
-            Padding="0,0,14,0"
-            VerticalScrollBarVisibility="Auto">
-
-            <controls:SwitchPresenter Value="{x:Bind ViewModel.ModPaneVM.ShowKeySwapSection, Mode=OneWay}">
-                <controls:Case Value="true">
+            <controls1:SwitchPresenter Grid.Row="3" Value="{x:Bind ViewModel.ModModel.IsKeySwapManagementEnabled, Mode=OneWay}">
+                <controls1:Case Value="true">
                     <StackPanel>
-                        <ItemsRepeater ItemsSource="{x:Bind ViewModel.ModPaneVM.SelectedModModel.SkinModKeySwaps, Mode=OneWay}">
+                        <ItemsRepeater ItemsSource="{x:Bind ViewModel.ModModel.KeySwaps, Mode=OneWay}">
                             <ItemsRepeater.ItemTemplate>
-                                <DataTemplate x:DataType="models:SkinModKeySwapModel">
+                                <DataTemplate x:DataType="subViewModels:ModPaneFieldsKeySwapVm">
                                     <Grid Margin="0,0">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*" />
@@ -172,22 +176,21 @@
                         </ItemsRepeater>
 
                     </StackPanel>
-                </controls:Case>
+                </controls1:Case>
 
-                <controls:Case Value="false">
+                <controls1:Case Value="false">
                     <TextBlock
                         HorizontalAlignment="Center"
                         VerticalAlignment="Top"
                         TextWrapping="WrapWholeWords"
                         Text="Key swap management is disabled for this mod" />
 
-                </controls:Case>
-            </controls:SwitchPresenter>
-
-
-
+                </controls1:Case>
+            </controls1:SwitchPresenter>
         </ScrollViewer>
-        <Grid Grid.Row="6" Padding="0,12">
+
+
+        <Grid Grid.Row="4" Padding="0,12">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
@@ -195,8 +198,8 @@
             </Grid.ColumnDefinitions>
             <Button
                 Background="{ThemeResource SystemFillColorAttentionBrush}"
-                Command="{x:Bind ViewModel.ModPaneVM.SaveModSettingsCommand}"
-                IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}">
+                Command="{x:Bind ViewModel.SaveModSettingsCommand}"
+                IsEnabled="{x:Bind ViewModel.IsNotReadOnly, Mode=OneWay}">
                 <Button.Content>
                     <StackPanel Orientation="Horizontal">
                         <FontIcon Margin="0,0,4,0" Glyph="&#xE74E;" />
@@ -209,7 +212,7 @@
 
             </Button>
 
-            <Grid Grid.Column="1" Visibility="{x:Bind ViewModel.ModPaneVM.SelectedModModel.IsEnabled, Mode=OneWay}">
+            <Grid Grid.Column="1" Visibility="{x:Bind ViewModel.ModModel.IsEnabled, Mode=OneWay}">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -234,9 +237,9 @@
             <Button
                 Grid.Column="2"
                 HorizontalAlignment="Right"
-                Command="{x:Bind ViewModel.ModPaneVM.OpenModFolderCommand}"
+                Command="{x:Bind ViewModel.OpenModFolderCommand}"
                 Content="Open Mod Folder..."
-                IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}" />
-        </Grid>-->
+                IsEnabled="{x:Bind ViewModel.IsNotReadOnly, Mode=OneWay}" />
+        </Grid>
     </Grid>
 </UserControl>
