--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/ModGrid.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/ModGrid.xaml
@@ -154,6 +154,7 @@
                     Binding="{Binding DisplayName, Mode=OneWay}"
                     CanUserSort="True"
                     Header="Mod Name"
+                    IsReadOnly="True"
                     Tag="DisplayName" />
 
                 <controls:DataGridTextColumn
