--- a/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
@@ -3,22 +3,12 @@
     x:Class="GIMI_ModManager.WinUI.Views.DebugPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
-    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:services="using:GIMI_ModManager.Core.Services"
-    xmlns:viewModels="using:GIMI_ModManager.WinUI.ViewModels"
     mc:Ignorable="d">
 
-
-
-
-
-    <StackPanel>
-        <Button Click="ButtonBase_OnClick" Content="Run Command" />
-        <Button Click="ButtonBase_OnClickOpenDialog" Content="OpenDialog" />
-        <Button Click="CreateCommand_OnClick" Content="Create Command" />
-    </StackPanel>
+    <Grid>
+        <Button Click="ButtonBase_OnClick">Export</Button>
+    </Grid>
 </Page>
