--- a/src/GIMI-ModManager.WinUI/Views/Settings/SettingsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Settings/SettingsPage.xaml
@@ -148,7 +148,17 @@
                             ToolTipService.ToolTip="If checked then the main window position is saved when JASM exits" />
                     </StackPanel>
 
+
+
                 </StackPanel>
+
+                <TextBlock Text="Legacy: " />
+
+                <CheckBox
+                    Command="{x:Bind ViewModel.ToggleLegacyCharacterDetailsCommand}"
+                    Content="Use old legacy character details page (this setting will be removed later)"
+                    IsChecked="{x:Bind ViewModel.LegacyCharacterDetails, Mode=OneWay}"
+                    ToolTipService.ToolTip="The character details page is where you see the mods in a grid. This page has been rewritten. Due to potential bugs arising there is a transition period where the old version will still be available. This checkbox will be removed at some point." />
 
                 <TextBlock
                     Style="{ThemeResource SubtitleTextBlockStyle}"
@@ -260,7 +270,7 @@
                         VerticalAlignment="Center"
                         IsTextSelectionEnabled="True"
                         TextWrapping="WrapWholeWords"
-                        Text="The Mod Update Checker checks for updates on startup and periodically in the background, only support for GameBanana.&#x0a;Does a check every 30 minutes when enabled, however, it only checks mods that have not been checked in at least 15 minutes.&#x0a;Manually checking for updates always checks GameBanana directly"
+                        Text="The Mod Update Checker checks for updates on startup and periodically in the background, only support for GameBanana.&#x0a;Does a check every 2 hours when enabled, however, it only checks mods that have not been checked in at least 1 hour.&#x0a;Manually checking for updates always checks GameBanana directly"
                         l:Uids.Uid="/Settings/ModUpdateCheckerDescription" />
 
                 </StackPanel>
