--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/CharacterCard.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/CharacterCard.xaml
@@ -21,6 +21,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+
         </Grid.RowDefinitions>
         <StackPanel MaxWidth="220">
             <Grid>
@@ -135,6 +137,10 @@
 
 
 
+        </StackPanel>
+
+        <StackPanel Grid.Row="2" Margin="0,0,0,8">
+            <Button HorizontalAlignment="Center" Command="{x:Bind ViewModel.DisableAllModsCommand}">Disable All Mods</Button>
         </StackPanel>
     </Grid>
 </UserControl>
